--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.echocat.repo4j</groupId>
     <artifactId>repo4j</artifactId>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
     <name>API for repositories in Java.</name>
     <url>https://github.com/echocat/repo4j</url>
     <description>Utilities to handle Java Streams.</description>
@@ -256,7 +256,7 @@
         <connection>scm:git://github.com/echocat/repo4j.git</connection>
         <developerConnection>scm:git:git@github.com:echocat/repo4j.git</developerConnection>
         <url>https://github.com/echocat/repo4j</url>
-        <tag>version-1.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
 </project>
