--- a/pom.xml
+++ b/pom.xml
@@ -238,7 +238,7 @@
                         <configuration>
                             <serverId>oss-sonatype-releases</serverId>
                             <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-<!--                            <autoReleaseAfterClose>true</autoReleaseAfterClose>-->
+                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                         </configuration>
                     </plugin>
 
